--- a/web/src/app/Components/alert/alert.component.html
+++ b/web/src/app/Components/alert/alert.component.html
@@ -1,4 +1,3 @@
-<!-- tailwind alert -->
-<div class="bg-red-100 border border-red-400 text-red-700 px-2 py-1 md:px-4 md:py-3 right-4 top-4 rounded absolute" role="alert">
+<div class="{{type}} px-2 py-1 md:px-4 md:py-3 right-4 top-4 rounded absolute" role="alert">
   <span class="block sm:inline">{{message}}</span>
 </div>
