--- a/web/src/app/Components/reset-password/reset-password.component.html
+++ b/web/src/app/Components/reset-password/reset-password.component.html
@@ -1,4 +1,4 @@
-<app-alert class="{{alertHidden}}" [message]="alertMessage"></app-alert>
+<app-alert [isHidden]=isAlertHidden [message]="alertMessage"></app-alert>
 <div class="flex items-center min-h-screen p-6 bg-gray-100">
     <div class="flex-1 h-full max-w-xl mx-auto overflow-hidden">
         <app-logo></app-logo>
