Login and Register

--- a/web/src/app/Components/change-password/change-password.component.html
+++ b/web/src/app/Components/change-password/change-password.component.html
@@ -1,4 +1,4 @@
-<app-alert class="{{alertHidden}}" message="{{alertMessage}}" type="{{alertType}}"> </app-alert>
+<app-alert [isHidden]=isAlertHidden message="{{alertMessage}}" type="{{alertType}}" (close)="handleClose($event)"></app-alert>
 <div class="flex items-center min-h-screen p-6 bg-gray-100">
     <div class="flex-1 h-full max-w-xl mx-auto overflow-hidden">
         <app-logo></app-logo>
