--- a/web/src/app/Components/login/login.component.html
+++ b/web/src/app/Components/login/login.component.html
@@ -11,29 +11,33 @@
                             <label class="block text-gray-700 text-sm font-bold mb-2" for="email">
                                 Email<span class="text-danger">*</span>
                             </label>
-                            <input
-                                class="form-control"
-                                id="email" type="email" name="email" [(ngModel)]="email" placeholder="someone@gmail.com">
+                            <input class="form-control" id="email" type="email" name="email" [(ngModel)]="email"
+                                placeholder="someone@gmail.com" required="true">
                             <div class="text-danger text-xs italic">{{emailError}}</div>
                         </div>
                         <div class="mb-6">
                             <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
                                 Password<span class="text-danger">*</span>
                             </label>
-                            <input
-                                class="form-control"
-                                id="password" type="password" name="password" [(ngModel)]="password"
-                                placeholder="******************">
+                            <input class="form-control" id="password" type="password" name="password"
+                                [(ngModel)]="password" placeholder="******************" required="true">
                             <div class="text-danger text-xs italic">{{pwdError}}</div>
                         </div>
                         <a class="inline-block align-baseline py-2 font-bold text-sm text-indigo-500 hover:text-indigo-800"
                             routerLink="/resetpassword">
                             Forgot Password?
                         </a>
-                        <button
-                            class="btn btn-primary block w-full"
-                            type="submit">
-                            Sign In
+                        <button [disabled]="isSigning? 'true':''" type="submit"
+                            class="w-full inline-flex items-center justify-center py-3 btn btn-primary">
+                            <svg class="{{(isSigning? '':'hidden')}} animate-spin mr-2 h-4 w-4 text-white"
+                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                                <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor"
+                                    stroke-width="4"></circle>
+                                <path class="opacity-75" fill="currentColor"
+                                    d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
+                                </path>
+                            </svg>
+                            <div>{{isSigning?"Signing In":"Sign In"}}</div>
                         </button>
 
                         <div class="flex justify-center mt-4">
