--- a/web/src/app/Components/reset-password/reset-password.component.html
+++ b/web/src/app/Components/reset-password/reset-password.component.html
@@ -1,4 +1,5 @@
-<app-alert [isHidden]=isAlertHidden [message]="alertMessage"></app-alert>
+<app-alert [isHidden]=isAlertHidden message="{{alertMessage}}" type="{{alertType}}" (close)="handleClose($event)">
+</app-alert>
 <div class="flex items-center min-h-screen p-6 bg-gray-100">
     <div class="flex-1 h-full max-w-xl mx-auto overflow-hidden">
         <app-logo></app-logo>
@@ -14,21 +15,14 @@
                             <label class="block text-gray-700 text-sm font-bold mb-2" for="email">
                                 Email
                             </label>
-                            <input
-                                class="form-control"
-                                id="email" type="email" name="email" [(ngModel)]="email" placeholder="i.e. someone@gmail.com">
+                            <input class="form-control" id="email" type="email" name="email" [(ngModel)]="email"
+                                placeholder="i.e. someone@gmail.com">
                             <div class="text-danger text-xs italic">{{emailError}}</div>
                         </div>
                         <div class="flex items-center justify-between">
-                            <button
-                                class="btn btn-primary"
-                                type="submit">
-                                Confirm
+                            <button class="btn btn-primary" type="submit">
+                                Send
                             </button>
-                            <a class="inline-block align-baseline font-bold text-sm text-indigo-500 hover:text-indigo-800"
-                                routerLink="/login">
-                                Back
-                            </a>
                         </div>
                     </form>
                 </div>
