--- a/web/src/app/Components/alert/alert.component.html
+++ b/web/src/app/Components/alert/alert.component.html
@@ -1,4 +1,4 @@
-<div class="{{type}} {{((isHidden)? 'hidden':'')}} animate-bounce px-2 py-1 md:px-4 md:py-3 right-4 top-4 rounded absolute" role="alert">
+<div class="{{type}} {{(isHidden? 'hidden':'')}} animate-bounce fixed px-2 py-1 md:px-4 md:py-3 right-4 top-4 rounded z-50" role="alert">
   <span class="block sm:inline">{{message}}
     <!-- close button -->
     <button class="ml-2 border-indigo-500 font-semibold" (click)="onClose()">
