--- a/web/src/app/Components/register/register.component.html
+++ b/web/src/app/Components/register/register.component.html
@@ -1,4 +1,4 @@
-<app-alert [isHidden]=isAlertHidden message="{{alertMessage}}" type="{{alertType}}"></app-alert>
+<app-alert [isHidden]=isAlertHidden message="{{alertMessage}}" type="{{alertType}}" (close)="handleClose($event)"></app-alert>
 <div class="flex items-center min-h-screen p-6 bg-gray-100">
     <div class="flex-1 h-full max-w-xl mx-auto overflow-hidden">
         <app-logo></app-logo>
@@ -45,11 +45,15 @@
                                 placeholder="******************">
                             <p class="text-danger text-xs italic">{{cpasswordError}}</p>
                         </div>
-                        <button
-                            class="block w-full btn btn-primary"
-                            type="submit">
-                            Sign up
-                        </button>
+                        <button [disabled]="isSigninUp? 'true':''" type="submit" class="w-full inline-flex items-center justify-center py-3 btn btn-primary">
+                            <svg class="{{(isSigninUp? '':'hidden')}} animate-spin mr-2 h-4 w-4 text-white" xmlns="http://www.w3.org/2000/svg" fill="none"
+                              viewBox="0 0 24 24">
+                              <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+                              <path class="opacity-75" fill="currentColor"
+                                d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
+                              </path>
+                            </svg> <div>{{isSigninUp?"Signing Up":"Sign Up"}}</div>
+                          </button>
 
                         <div class="flex justify-center mt-4">
                             <a class="inline-block align-baseline text-center font-bold text-sm text-indigo-500 hover:text-indigo-800"
