--- a/web/src/app/Components/change-password/change-password.component.html
+++ b/web/src/app/Components/change-password/change-password.component.html
@@ -1,4 +1,5 @@
-<app-alert [isHidden]=isAlertHidden message="{{alertMessage}}" type="{{alertType}}" (close)="handleClose($event)"></app-alert>
+<app-alert [isHidden]=isAlertHidden message="{{alertMessage}}" type="{{alertType}}" (close)="handleClose($event)">
+</app-alert>
 <div class="flex items-center min-h-screen p-6 bg-gray-100">
     <div class="flex-1 h-full max-w-xl mx-auto overflow-hidden">
         <app-logo></app-logo>
@@ -11,26 +12,20 @@
                             <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
                                 New Password
                             </label>
-                            <input
-                                class="form-control"
-                                id="password" name="password" [(ngModel)]="password" type="password"
-                                placeholder="******************">
+                            <input class="form-control" id="password" name="password" [(ngModel)]="password"
+                                type="password" placeholder="******************">
                             <p class="text-danger text-xs italic">{{passwordError}}</p>
                         </div>
                         <div class="mb-6">
                             <label class="block text-gray-700 text-sm font-bold mb-2" for="cpassword">
                                 Confirm Password
                             </label>
-                            <input
-                                class="form-control"
-                                id="cpassword" name="cpassword" [(ngModel)]="cpassword" type="password"
-                                placeholder="******************">
+                            <input class="form-control" id="cpassword" name="cpassword" [(ngModel)]="cpassword"
+                                type="password" placeholder="******************">
                             <p class="text-danger text-xs italic">{{cpasswordError}}</p>
                         </div>
                         <div class="flex items-center justify-between">
-                            <button
-                                class="btn btn-primary"
-                                type="submit">
+                            <button class="btn btn-primary" type="submit">
                                 Confirm
                             </button>
                             <a class="inline-block align-baseline font-bold text-sm text-indigo-500 hover:text-indigo-800"
