--- a/web/src/app/Components/reset-password/reset-password.component.html
+++ b/web/src/app/Components/reset-password/reset-password.component.html
@@ -6,22 +6,58 @@
         <div class="flex flex-col overflow-y-auto bg-white rounded-lg shadow">
             <div class="flex items-center justify-center px-12 pt-6 pb-4">
                 <div class="w-full pb-2">
-                    <form (ngSubmit)="onSubmit()">
+                    <form [hidden]="isEmailSent" (ngSubmit)="onSendEmail()">
                         <h1 class="text-center text-4xl">Reset Password</h1>
                         <p class="text-center text-gray-600">
-                            Enter your email address and we'll send you a link to reset your password.
+                            Enter your email address and we'll send you a link to varify your account.
                         </p>
-                        <div class="mb-4">
-                            <label class="block text-gray-700 text-sm font-bold mb-2" for="email">
-                                Email
-                            </label>
+                        <div class="my-4">
                             <input class="form-control" id="email" type="email" name="email" [(ngModel)]="email"
                                 placeholder="i.e. someone@gmail.com">
                             <div class="text-danger text-xs italic">{{emailError}}</div>
                         </div>
-                        <div class="flex items-center justify-between">
-                            <button class="btn btn-primary" type="submit">
-                                Send
+                        <div class="text-center">
+                            <button [disabled]="isSendingEmail? 'true':''" type="submit"
+                                class="inline-flex items-center justify-center px-10 py-3 btn btn-primary">
+                                <svg class="{{(isSendingEmail? '':'hidden')}} animate-spin mr-2 h-4 w-4 text-white"
+                                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                                    <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor"
+                                        stroke-width="4"></circle>
+                                    <path class="opacity-75" fill="currentColor"
+                                        d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
+                                    </path>
+                                </svg>
+                                <div>{{isSendingEmail?"Sending":"Send"}}</div>
+                            </button>
+                        </div>
+                    </form>
+                    <form [hidden]="!isEmailSent" (ngSubmit)="onVarifyCode()">
+                        <h1 class="text-center text-4xl">Varify Account</h1>
+                        <p class="text-center text-gray-600">
+                            Before changing your password, we need to varify your account.
+                            Varification code has been sent to your email.
+                        </p>
+                        <div class="my-4">
+                            <input class="form-control" id="code" type="text" name="code" [(ngModel)]="code"
+                                placeholder="i.e 4fgr15">
+                            <div class="text-danger text-xs italic">{{codeError}}</div>
+                        </div>
+                        <div class="text-center">
+                            <button [disabled]="isVarifingCode? 'true':''" type="submit"
+                                class="inline-flex items-center justify-center px-10 py-3 btn btn-primary">
+                                <svg class="{{(isVarifingCode? '':'hidden')}} animate-spin mr-2 h-4 w-4 text-white"
+                                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                                    <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor"
+                                        stroke-width="4"></circle>
+                                    <path class="opacity-75" fill="currentColor"
+                                        d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
+                                    </path>
+                                </svg>
+                                <div>{{isVarifingCode?"Varifing":"Varify"}}</div>
+                            </button>
+                            <h5 class="text-center mt-2">or</h5>
+                            <button type="button" (click)="resendVarificationCode()" class="mt-2 text-indigo-600 hover:text-indigo-700">
+                                Resend Email
                             </button>
                         </div>
                     </form>
