--- a/web/src/app/Components/varify-account/varify-account.component.html
+++ b/web/src/app/Components/varify-account/varify-account.component.html
@@ -24,7 +24,7 @@
                             <div>{{isVarifing?"Varifing":"Varify"}}</div>
                         </button>
                         <br>
-                        <button type="button" class="mt-2 text-indigo-600 hover:text-indigo-700">
+                        <button type="button" (click)="resendVarificationCode()" class="mt-2 text-indigo-600 hover:text-indigo-700">
                             Resend Email
                         </button>
                     </form>
