--- a/web/src/app/Components/classes/classes.component.html
+++ b/web/src/app/Components/classes/classes.component.html
@@ -1,1 +1,74 @@
-<p>classes works!</p>
+<div class="mx-2 md:mx-5 bg-white p-3 mt-3 shadow-md overflow-x-auto">
+    <p>Add a new class into school <a href="#" class="text-indigo-700 hover:text-indigo-500">here.</a></p>
+    <div class="">
+        <table class="table-auto w-full mt-2 text-left">
+            <thead>
+                <tr class="bg-indigo-600 text-white">
+                    <th class="border px-4 py-2"  scope="col">#</th>
+                    <th class="border px-4 py-2"  scope="col">Name</th>
+                    <th class="border px-4 py-2"  scope="col">Description</th>
+                    <th class="border px-4 py-2"  scope="col">Students</th>
+                    <th class="border px-4 py-2"  scope="col">Fee/Student</th>
+                    <th class="border px-4 py-2"  scope="col">Action</th>
+                </tr>
+            </thead>
+            <tbody class="text-gray-800">
+                <tr>
+                    <th class="border px-4 py-2" scope="row">1</th>
+                    <td class="border px-4 py-2">Brandon Jacob</td>
+                    <td class="border px-4 py-2">Designer</td>
+                    <td class="border px-4 py-2">28</td>
+                    <td class="border px-4 py-2">1000</td>
+                    <td class="border px-4 py-2">
+                        <i class="fas fa-edit m-1 px-1 cursor-pointer text-indigo-700 hover:text-indigo-500"></i>
+                        <i class="fas fa-trash m-1 px-1 cursor-pointer text-red-700 hover:text-red-500"></i>
+                    </td>
+                </tr>
+                <tr class="bg-indigo-50">
+                    <th class="border px-4 py-2" scope="row">1</th>
+                    <td class="border px-4 py-2">Brandon Jacob</td>
+                    <td class="border px-4 py-2">Designer</td>
+                    <td class="border px-4 py-2">28</td>
+                    <td class="border px-4 py-2">1000</td>
+                    <td class="border px-4 py-2">
+                        <i class="fas fa-edit m-1 px-1 cursor-pointer text-indigo-700 hover:text-indigo-500"></i>
+                        <i class="fas fa-trash m-1 px-1 cursor-pointer text-red-700 hover:text-red-500"></i>
+                    </td>
+                </tr>
+                <tr>
+                    <th class="border px-4 py-2" scope="row">1</th>
+                    <td class="border px-4 py-2">Brandon Jacob</td>
+                    <td class="border px-4 py-2">Designer</td>
+                    <td class="border px-4 py-2">28</td>
+                    <td class="border px-4 py-2">1000</td>
+                    <td class="border px-4 py-2">
+                        <i class="fas fa-edit m-1 px-1 cursor-pointer text-indigo-700"></i>
+                        <i class="fas fa-trash m-1 px-1 cursor-pointer text-red-700"></i>
+                    </td>
+                </tr>
+                <tr class="bg-indigo-50">
+                    <th class="border px-4 py-2" scope="row">1</th>
+                    <td class="border px-4 py-2">Brandon Jacob</td>
+                    <td class="border px-4 py-2">Designer</td>
+                    <td class="border px-4 py-2">28</td>
+                    <td class="border px-4 py-2">1000</td>
+                    <td class="border px-4 py-2">
+                        <i class="fas fa-edit m-1 px-1 cursor-pointer text-indigo-700"></i>
+                        <i class="fas fa-trash m-1 px-1 cursor-pointer text-red-700"></i>
+                    </td>
+                </tr>
+                <tr>
+                    <th class="border px-4 py-2" scope="row">1</th>
+                    <td class="border px-4 py-2">Brandon Jacob</td>
+                    <td class="border px-4 py-2">Designer</td>
+                    <td class="border px-4 py-2">28</td>
+                    <td class="border px-4 py-2">1000</td>
+                    <td class="border px-4 py-2">
+                        <i class="fas fa-edit m-1 px-1 cursor-pointer text-indigo-700"></i>
+                        <i class="fas fa-trash m-1 px-1 cursor-pointer text-red-700"></i>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
