minor changes to frontend

--- a/web/src/app/pages/auth/register/register.component.html
+++ b/web/src/app/pages/auth/register/register.component.html
@@ -1,4 +1,5 @@
-<app-alert [isHidden]=isAlertHidden message="{{alertMessage}}" type="{{alertType}}" (close)="handleClose($event)"></app-alert>
+<app-alert [isHidden]=isAlertHidden message="{{alertMessage}}" type="{{alertType}}" (close)="handleClose($event)">
+</app-alert>
 <div class="flex items-center min-h-screen p-6 bg-gray-100">
     <div class="flex-1 h-full max-w-xl mx-auto overflow-hidden">
         <app-logo></app-logo>
@@ -11,49 +12,61 @@
                             <label class="block text-gray-700 text-sm font-bold mb-2" for="name">
                                 Name<span class="text-danger">*</span>
                             </label>
-                            <input
-                                class="form-control"
-                                id="name" name="name" [(ngModel)]="name" type="text" placeholder="someone">
+                            <input class="form-control" id="name" name="name" [(ngModel)]="name" type="text"
+                                placeholder="someone">
                             <p class="text-danger text-xs italic">{{nameError}}</p>
                         </div>
                         <div class="mb-4">
                             <label class="block text-gray-700 text-sm font-bold mb-2" for="email">
                                 Email<span class="text-danger">*</span>
                             </label>
-                            <input
-                                class="form-control"
-                                id="email" name="email" [(ngModel)]="email" type="email" placeholder="someone@gmail.com">
+                            <input class="form-control" id="email" name="email" [(ngModel)]="email" type="email"
+                                placeholder="someone@gmail.com">
                             <p class="text-danger text-xs italic">{{emailError}}</p>
+                        </div>
+                        <div class="mb-4">
+                            <label class="block text-gray-700 text-sm font-bold mb-2" for="role">
+                                Role<span class="text-danger">*</span>
+                            </label>
+                            <select class="form-control" id="role" [(ngModel)]="role" name="role">
+                                <option *ngFor="let role of roles" [ngValue]="role.value">{{role.name}}</option>
+                            </select>
+                        </div>
+                        <div class="mb-4">
+                            <label class="block text-gray-700 text-sm font-bold mb-2" for="description">
+                                Description<span class="text-danger">*</span>
+                            </label>
+                            <textarea name="description" [(ngModel)]="description" class="form-control" id="desription" cols="30" rows="5" placeholder="Describe your abilities"></textarea>
+                            <p class="text-danger text-xs italic">{{descError}}</p>
                         </div>
                         <div class="mb-4">
                             <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
                                 Password<span class="text-danger">*</span>
                             </label>
-                            <input
-                                class="form-control"
-                                id="password" name="password" [(ngModel)]="password" type="password"
-                                placeholder="******************">
+                            <input class="form-control" id="password" name="password" [(ngModel)]="password"
+                                type="password" placeholder="******************">
                             <p class="text-danger text-xs italic">{{passwordError}}</p>
                         </div>
                         <div class="mb-6">
                             <label class="block text-gray-700 text-sm font-bold mb-2" for="cpassword">
                                 Confirm Password
                             </label>
-                            <input
-                                class="form-control"
-                                id="cpassword" name="cpassword" [(ngModel)]="cpassword" type="password"
-                                placeholder="******************">
+                            <input class="form-control" id="cpassword" name="cpassword" [(ngModel)]="cpassword"
+                                type="password" placeholder="******************">
                             <p class="text-danger text-xs italic">{{cpasswordError}}</p>
                         </div>
-                        <button [disabled]="isSigninUp? 'true':''" type="submit" class="w-full inline-flex items-center justify-center py-3 btn btn-primary">
-                            <svg class="{{(isSigninUp? '':'hidden')}} animate-spin mr-2 h-4 w-4 text-white" xmlns="http://www.w3.org/2000/svg" fill="none"
-                              viewBox="0 0 24 24">
-                              <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
-                              <path class="opacity-75" fill="currentColor"
-                                d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
-                              </path>
-                            </svg> <div>{{isSigninUp?"Signing Up":"Sign Up"}}</div>
-                          </button>
+                        <button [disabled]="isSigninUp? 'true':''" type="submit"
+                            class="w-full inline-flex items-center justify-center py-3 btn btn-primary">
+                            <svg class="{{(isSigninUp? '':'hidden')}} animate-spin mr-2 h-4 w-4 text-white"
+                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                                <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor"
+                                    stroke-width="4"></circle>
+                                <path class="opacity-75" fill="currentColor"
+                                    d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
+                                </path>
+                            </svg>
+                            <div>{{isSigninUp?"Signing Up":"Sign Up"}}</div>
+                        </button>
 
                         <div class="flex justify-center mt-4">
                             <a class="inline-block align-baseline text-center font-bold text-sm text-indigo-500 hover:text-indigo-800"
