--- a/web/src/app/pages/auth/activate-account/activate-account.component.html
+++ b/web/src/app/pages/auth/activate-account/activate-account.component.html
@@ -7,8 +7,8 @@
             <div class="flex items-center justify-center px-12 pt-6 pb-4">
                 <div class="w-full">
                     <form class="text-center" (ngSubmit)="onSubmit()">
-                        <h1 class="text-4xl">Varify Account</h1>
-                        <p>To varify your account check your email. If not receive email
+                        <h1 class="text-4xl">Activate Account</h1>
+                        <p>To activate your account check your email. If not receive email
                             then click below to get your email.</p>
                         <input class="mt-2 form-control" name="varificationCode"
                             type="text" placeholder="Varification Code" [(ngModel)]="varificationCode" required>
