--- a/web/src/app/pages/auth/change-password/change-password.component.html
+++ b/web/src/app/pages/auth/change-password/change-password.component.html
@@ -24,14 +24,10 @@
                                 type="password" placeholder="******************">
                             <p class="text-danger text-xs italic">{{cpasswordError}}</p>
                         </div>
-                        <div class="flex items-center justify-between">
+                        <div class="flex items-center justify-center">
                             <button class="btn btn-primary" type="submit">
                                 Confirm
                             </button>
-                            <a class="inline-block align-baseline font-bold text-sm text-indigo-500 hover:text-indigo-800"
-                                routerLink="/login">
-                                Cancel
-                            </a>
                         </div>
                     </form>
                 </div>
