--- a/web/src/app/pages/auth/forgot-password/forgot-password.component.html
+++ b/web/src/app/pages/auth/forgot-password/forgot-password.component.html
@@ -7,9 +7,9 @@
             <div class="flex items-center justify-center px-12 pt-6 pb-4">
                 <div class="w-full pb-2">
                     <form [hidden]="isEmailSent" (ngSubmit)="onSendEmail()">
-                        <h1 class="text-center text-4xl">Reset Password</h1>
+                        <h1 class="text-center text-4xl">Forgot Password</h1>
                         <p class="text-center text-gray-600">
-                            Enter your email address and we'll send you a link to varify your account.
+                            Enter your email address and we'll send you a link to change your password.
                         </p>
                         <div class="my-4">
                             <input class="form-control" id="email" type="email" name="email" [(ngModel)]="email"
@@ -31,21 +31,14 @@
                             </button>
                         </div>
                     </form>
-                    <form [hidden]="!isEmailSent" (ngSubmit)="onVarifyCode()">
-                        <h1 class="text-center text-4xl">Varify Account</h1>
-                        <p class="text-center text-gray-600">
-                            Before changing your password, we need to varify your account.
-                            Varification code has been sent to your email.
-                        </p>
-                        <div class="my-4">
-                            <input class="form-control" id="code" type="text" name="code" [(ngModel)]="code"
-                                placeholder="i.e 4fgr15">
-                            <div class="text-danger text-xs italic">{{codeError}}</div>
-                        </div>
-                        <div class="text-center">
-                            <button [disabled]="isVarifingCode? 'true':''" type="submit"
+                    <div [hidden]="!isEmailSent">
+                        <h1 class="text-center text-4xl">Forgot Password</h1>
+                        <p class="text-center text-gray-600">We have sent you email, if you have not received email then
+                            click resend.</p>
+                        <div class="w-full text-center mt-2">
+                            <button (click)="resendEmail()" [disabled]="isSendingEmail? 'true':''" type="submit"
                                 class="inline-flex items-center justify-center px-10 py-3 btn btn-primary">
-                                <svg class="{{(isVarifingCode? '':'hidden')}} animate-spin mr-2 h-4 w-4 text-white"
+                                <svg class="{{(isSendingEmail? '':'hidden')}} animate-spin mr-2 h-4 w-4 text-white"
                                     xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
                                     <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor"
                                         stroke-width="4"></circle>
@@ -53,14 +46,10 @@
                                         d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
                                     </path>
                                 </svg>
-                                <div>{{isVarifingCode?"Varifing":"Varify"}}</div>
-                            </button>
-                            <h5 class="text-center mt-2">or</h5>
-                            <button type="button" (click)="resendVarificationCode()" class="mt-2 text-indigo-600 hover:text-indigo-700">
-                                Resend Email
+                                <div>{{isSendingEmail?"Resending":"Resend"}}</div>
                             </button>
                         </div>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
