--- a/web/src/app/pages/auth/login/login.component.html
+++ b/web/src/app/pages/auth/login/login.component.html
@@ -24,7 +24,7 @@
                             <div class="text-danger text-xs italic">{{pwdError}}</div>
                         </div>
                         <a class="inline-block align-baseline py-2 font-bold text-sm text-indigo-500 hover:text-indigo-800"
-                            routerLink="/resetpassword">
+                            routerLink="/forgotpassword">
                             Forgot Password?
                         </a>
                         <button [disabled]="isSigning? 'true':''" type="submit"
