teacher and clerk pages initialized

--- a/web/src/app/Components/navbar/navbar.component.html
+++ b/web/src/app/Components/navbar/navbar.component.html
@@ -12,7 +12,7 @@
             </a>
          </div>
          <div class="flex items-center">
-            <a routerLink="/" class="hidden sm:inline-flex ml-5 btn btn-primary py-2">
+            <a (click)="handleLogout()" class="hidden sm:inline-flex ml-5 btn btn-primary py-2">
                Logout
             </a>
          </div>
