--- a/web/src/app/pages/principal/principal-sidebar/principal-sidebar.component.html
+++ b/web/src/app/pages/principal/principal-sidebar/principal-sidebar.component.html
@@ -129,6 +129,15 @@
                      <span class="ml-3 flex-1 whitespace-nowrap">Chats</span>
                   </a>
                </li>
+               <li>
+                  <a routerLink="/principal/applications" (click)="changeHeading('Applications')"
+                     class="text-base text-gray-900 font-normal rounded-lg flex items-center p-2 hover:bg-gray-100 group">
+                     <div class="w-6 h-6 text-gray-500 group-hover:text-gray-900 transition duration-75">
+                        <i class="fa-solid fa-book"></i>
+                     </div>
+                     <span class="ml-3 flex-1 whitespace-nowrap">Applications</span>
+                  </a>
+               </li>
             </ul>
          </div>
       </div>
